/*
 * Licensed to Elasticsearch B.V. under one or more contributor
 * license agreements. See the NOTICE file distributed with
 * this work for additional information regarding copyright
 * ownership. Elasticsearch B.V. licenses this file to you under
 * the Apache License, Version 2.0 (the "License"); you may
 * not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */


const { createAbsolutePathSerializer, REPO_ROOT } = require('@kbn/dev-utils');

const { createPreset } = require('./create_preset');

const configs = [
  [{ }],
  [{ filterPolyfills: true }],
  [{ webpack: true }],
];

expect.addSnapshotSerializer(createAbsolutePathSerializer(REPO_ROOT));

describe.each(configs)('%j', (config) => {
  it('produces correct preset', () => {
    expect(createPreset(config)()).toMatchSnapshot();
  });
});
